Criando classes que especializam os tipos de parâmetros de descritor